# swri_console

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
.github/workflows/: industrial_ci.yml  main.yml
include/swri_console/: bag_reader.h  console_master.h  console_window.h  defines.h  log_database.h  log_database_proxy_model.h  node_click_handler.h  node_list_model.h  ros_thread.h  rosout_log_loader.h  settings_keys.h
scripts/: console_generator.py  rosout_agg_recorder
src/: bag_reader.cpp  console_master.cpp  console_window.cpp  log_database.cpp  log_database_proxy_model.cpp  main.cpp  node_click_handler.cpp  node_list_model.cpp  ros_thread.cpp  rosout_log_loader.cpp  settings_keys.cpp
ui/: console_window.ui
