<?xml version="1.0"?>
<package format="2">
  <name>swri_console</name>
  <version>2.0.0</version>
  <description>

     A rosout GUI viewer developed at Southwest Research Insititute as an
     alternative to rqt_console.

  </description>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <maintainer email="jtowler@swri.org">Jerry Towler</maintainer>
  <url>http://ros.org/wiki/swri_console</url>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend> 
  <build_depend>libqt5-opengl-dev</build_depend>
  <depend>boost</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <!-- <depend>rosbag_storage</depend> -->
  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
 
  <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
