<?xml version="1.0"?>
<package format="2">
  <name>swri_console</name>
  <version>1.1.1</version>
  <description>

     A rosout GUI viewer developed at Southwest Research Insititute as an
     alternative to rqt_console.

  </description>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <maintainer email="jtowler@swri.org">Jerry Towler</maintainer>
  <url>http://ros.org/wiki/swri_console</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <depend>boost</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rosbag_storage</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
 
</package>
